erDiagram

    USER {
        int id PK
        string name
        string email
        string role
    }

    PROFILE {
        int id PK
        int user_id FK
        string bio
        string avatarUrl
    }

    CATEGORY {
        int id PK
        string name
    }

    COURSE {
        int id PK
        string title
        string description
        int category_id FK
        int teacher_id FK
        string duration
        date startDate
    }

    ENROLLMENT {
        int id PK
        int user_id FK
        int course_id FK
        date enrollDate
        string status
    }

    MODULE {
        int id PK
        int course_id FK
        string title
        int orderIndex
        string description
    }

    LESSON {
        int id PK
        int module_id FK
        string title
        string content
        string videoUrl
    }

    ASSIGNMENT {
        int id PK
        int lesson_id FK
        string title
        string description
        date dueDate
        int maxScore
    }

    SUBMISSION {
        int id PK
        int assignment_id FK
        int student_id FK
        datetime submittedAt
        string content
        int score
        string feedback
    }

    QUIZ {
        int id PK
        int module_id FK
        string title
        int timeLimit
    }

    QUESTION {
        int id PK
        int quiz_id FK
        string text
        string type
    }

    ANSWEROPTION {
        int id PK
        int question_id FK
        string text
        boolean isCorrect
    }

    QUIZSUBMISSION {
        int id PK
        int quiz_id FK
        int student_id FK
        int score
        datetime takenAt
    }

    COURSEREVIEW {
        int id PK
        int course_id FK
        int student_id FK
        int rating
        string comment
        datetime createdAt
    }

    TAG {
        int id PK
        string name
    }

    COURSE_TAG {
        int course_id FK
        int tag_id FK
    }

%% === Relationships ===

    USER ||--|| PROFILE : "has"
    USER ||--o{ COURSE : "teaches"
    USER ||--o{ ENROLLMENT : "enrolled in"
    USER ||--o{ SUBMISSION : "submits"
    USER ||--o{ QUIZSUBMISSION : "takes"
    USER ||--o{ COURSEREVIEW : "writes"

    PROFILE }o--|| USER : "belongs to"

    CATEGORY ||--o{ COURSE : "contains"

    COURSE ||--o{ MODULE : "has"
    COURSE ||--o{ ENROLLMENT : "enrolled by"
    COURSE ||--o{ COURSEREVIEW : "reviewed by"
    COURSE }o--|| CATEGORY : "belongs to"
    COURSE }o--|| USER : "taught by"
    COURSE }o--o{ TAG : "tagged as"
    COURSE ||--o{ QUIZ : "may have"

    ENROLLMENT }o--|| USER : "for"
    ENROLLMENT }o--|| COURSE : "of"

    MODULE }o--|| COURSE : "belongs to"
    MODULE ||--o{ LESSON : "has"
    MODULE ||--|| QUIZ : "has optional"

    LESSON }o--|| MODULE : "belongs to"
    LESSON ||--o{ ASSIGNMENT : "includes"

    ASSIGNMENT }o--|| LESSON : "belongs to"
    ASSIGNMENT ||--o{ SUBMISSION : "receives"

    SUBMISSION }o--|| ASSIGNMENT : "for"
    SUBMISSION }o--|| USER : "by student"

    QUIZ }o--|| MODULE : "belongs to"
    QUIZ ||--o{ QUESTION : "contains"
    QUIZ ||--o{ QUIZSUBMISSION : "results"

    QUESTION }o--|| QUIZ : "belongs to"
    QUESTION ||--o{ ANSWEROPTION : "has"

    ANSWEROPTION }o--|| QUESTION : "belongs to"

    QUIZSUBMISSION }o--|| QUIZ : "for"
    QUIZSUBMISSION }o--|| USER : "by student"

    COURSEREVIEW }o--|| COURSE : "for"
    COURSEREVIEW }o--|| USER : "by student"

    TAG }o--o{ COURSE : "marks"
    COURSE_TAG }o--|| COURSE : "links"
    COURSE_TAG }o--|| TAG : "links"
